--- a/Informatica/001/o_que_e.html
+++ b/Informatica/001/o_que_e.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>O que é um Computador</h2>
 	<img src="computer.png">
 	<p>
@@ -16,5 +11,5 @@
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	Os computadores pessoais contam com uma série de periféricos, entre eles, teclado, mouse, impressora, microfone, câmera, fones de ouvido etc. Enquanto os portáteis possuem teclado e monitor num mesmo equipamento, os computadores de mesa possuem um gabinete a parte, onde se encontram o processador, as unidades de armazenamento, memórias etc. Estes componentes eletrônicos são chamados de hardwares, que são os componentes físicos de um computador, por outro lado, os programas que vemos na tela são chamados de softwares.
 	</p>
-</body>
+</div>
 </html>
