--- a/Informatica/009/janela.html
+++ b/Informatica/009/janela.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>O Conceito de Janela</h2>
 	<img src="janela.png">
 
@@ -57,4 +52,5 @@
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Caso a informação seja insuficiente, podemos acessar um menu de ajuda sobre o aplicativo que está aberto pressionando a tecla F1 do teclado (no canto superior esquerdo do teclado). A maioria dos aplicativos possuem um menu de ajuda, no entanto alguns requerem conexão com a internet.
   </p>
-</body>
+</div>
+</html>
