--- a/Informatica/012/tarefas.html
+++ b/Informatica/012/tarefas.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Barra de Tarefas e Menu Iniciar</h2>
 	<img src="tarefas.png" style="width: 100%;">
 
@@ -49,7 +44,7 @@
     Os blocos do menu iniciar aparecem logo ao lado da lista completa de programas, para fixar um programa nos blocos, basta clicar com o botão direito do mouse sobre ele e selecionar Fixar no Menu Iniciar.
   </p>
 
-</body>
-
+</div>
+</html>
 
 
