--- a/Informatica/013/configuracoes.html
+++ b/Informatica/013/configuracoes.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Configurações do Windows</h2>
 	<img src="configuracoes.png" style="width: 100%;">
 
@@ -190,4 +185,5 @@
   <p style="margin-left: 60px;">
     3. Marque a opção Ocultar automaticamente a Barra de Tarefas no modo de Área de Trabalho.
   </p>
-</body>
+</div>
+</html>
