--- a/Informatica/015/teclado.html
+++ b/Informatica/015/teclado.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Teclado</h2>
 
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -350,4 +345,4 @@
   </b></p>
 	<p style="margin-left: 60px;">A combinação da tecla do logotipo do Windows e a letra D exibe a Área de Trabalho.
   </p>
-</body>
+</div>
