--- a/Informatica/019/edge.html
+++ b/Informatica/019/edge.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Microsoft Edge</h2>
 	<img src="edge.png" style="width: 100%;">
 
@@ -17,4 +12,4 @@
     O Microsoft Edge possui uma gama de recursos úteis para quem navega com frequência na internet, como salvar senhas e preenchimentos de formulários, sincronização dos dados com uma conta da Microsoft (a mesma usada no login do computador), sincronização entre outros dispositivos, tradutor embutido para páginas da internet e trechos de texto, coleções de páginas, favoritos, leitor de tela em voz alta, entre outros recursos.
   </p>
 
-</body>
+</div>
