--- a/Informatica/020/pesquisa.html
+++ b/Informatica/020/pesquisa.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Pesquisa na Web</h2>
 
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -93,4 +88,4 @@
     Após o .br/ ou após o .com/ podemos ter ainda mais informações no URL, nesse caso, elas estarão direcionando o usuário para páginas, serviços ou opções, dentro do site principal.
   </p>
 
-</body>
+</div>
