--- a/Informatica/021/download.html
+++ b/Informatica/021/download.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Download de Arquivos</h2>
 
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -25,4 +20,4 @@
     Este download foi legal? Sim, pois a obra Dom Casmurro é de Domínio Público, tanto que se notar, baixamos ela diretamente de uma página oficial do Ministério da Educação.
   </p>
 
-</body>
+</div>
