--- a/Informatica/027/cookies.html
+++ b/Informatica/027/cookies.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Cache e Cookies</h2>
 
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -28,4 +23,4 @@
   </p>
 	<p class="notas">Preste atenção ao selecionar o intervalo de tempo, pois se você estiver navegando a mais de uma hora, e escolher remover os dados desde a última hora, todos os dados inseridos a mais de uma hora atrás serão mantidos.</p>
 
-</body>
+</div>
