--- a/Informatica/028/exercicio2.html
+++ b/Informatica/028/exercicio2.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
 <html>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8" />
-</head>
-
-<body class="js-post">
+<div class="js-post">
   <img src="exercicio.png" style="width: 100%;">
 
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -20,8 +14,8 @@
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Para tal, em um novo arquivo Word escreva o texto abaixo e ao final formate-o e insira uma imagem para deixá-lo o mais parecido possível:
   </p>
-  <embed src="exercicio2.pdf#view=FitH&toolbar=0" type="application/pdf"
-    style="border: none; width: 100%; height: 2800px;"></embed>
+
+  <iframe src="https://drive.google.com/file/d/1Kbuts1GltMzgnHjZtncq5Dkak7w3hXZU/preview" width="640" height="480" allow="autoplay"></iframe>
 
     <h3>Observações do exercício</h3>
     <p style="margin-left: 60px;">
@@ -39,4 +33,5 @@
     <p style="margin-left: 60px;">
       5. Exporte o arquivo como .pdf em sua pasta.
     </p>
-</body>
+</div>
+</html>
