--- a/Informatica/028/office.html
+++ b/Informatica/028/office.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
+
+  <h2>Microsoft Office</h2>
 
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     O Microsoft Office é um suíte de aplicativos utilizado para criar diversos tipos de documentos como arquivos de texto, planilhas, apresentações de slides e layouts de impressão. Os aplicativos mais utilizados desse suíte são:
@@ -92,4 +89,4 @@
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Para alterar o idioma clique em Arquivo → Opções → Idioma, selecione o idioma de sua preferência e clique em Mover Para Cima até ele chegar ao topo da lista. Se o idioma buscado não estiver na lista, escolha Adicionar um idioma, procure-o na lista e clique em Instalar. É necessário conexão com a internet para o pacote de idioma ser baixado.
   </p>
-</body>
+</div>
