--- a/Informatica/029/powerpoint.html
+++ b/Informatica/029/powerpoint.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
   <h2>Microsoft PowerPoint</h2>
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     O Powerpoint é um software do suíte de aplicativos do Office utilizado para criar apresentações de slides, que são animações compostas de gráficos, texto, sons, vídeos e outros elementos.
@@ -366,4 +361,4 @@
   <p style="margin-left: 60px;">
     11. O processo de exportação aparecerá na Barra de Status na parte inferior do Powerpoint. Assim que for concluído você já poderá abrir o vídeo.
   </p>
-</body>
+</div>
