--- a/Informatica/030/excel.html
+++ b/Informatica/030/excel.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Microsoft Excel</h2>
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     O Microsoft Excel é uma das mais poderosas ferramentas de manipulação de dados, com qual podemos trabalhar números, valores, datas, moedas, gráficos, operações matemáticas e muito mais.
@@ -229,4 +224,4 @@
     <b>Regras personalizadas</b>: Podemos ainda aplicar regras personalizadas definindo conteúdos condicionais ou intervalos de acordo com a necessidade, podemos até mesmo criar fórmulas para definir quais células devem receber a formatação especial.
   </p>
 
-</body>
+</div>
