--- a/Informatica/030/exercicio.html
+++ b/Informatica/030/exercicio.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<img src="exercicio.png">
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Antes de começarmos a trabalhar com matemática no Excel, vamos fazer um pequeno exercício prático para fixar tudo o que aprendemos até agora.
@@ -87,4 +82,4 @@
     Se tiver dificuldade com este exercício peça ajuda ao seu instrutor.
   </p>
 
-</body>
+</div>
