--- a/Informatica/030/exercicio2.html
+++ b/Informatica/030/exercicio2.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<img src="exercicio.png">
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Neste exercício desenvolveremos uma planilha de controle de gastos completa para treinarmos tudo o que aprendemos até agora. Neste exercício trabalharemos com fórmulas, gráficos, tabelas, formatação condicional e layout.
@@ -427,4 +422,4 @@
 
   <a class="js-button" href="Exercício Excel.xlsx" target="_blank">Baixar este exercício finalizado</a>
 
-</body>
+</div>
