--- a/Informatica/032/esteja.html
+++ b/Informatica/032/esteja.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Esteja protegido</h2>
   <h3>Cuide da sua imagem</h3>
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -55,5 +50,5 @@
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     O uso da internet e das ferramentas virtuais com parcimônia manterá o usuário seguro, tendo em conta que os benefícios da internet e da informática superam e muito seus perigos. O que devemos levar em conta ao utilizar esses serviços é que a maioria das pessoas não conhece o processo que está por trás de tudo o que usa, e, portanto, reage apenas com a visão empírica que tem num primeiro momento. É fundamental entendermos as tecnologias que utilizamos diariamente e saber que nem tudo deve depender delas, mas que elas são ferramentas extraordinárias para facilitar nossas vidas e, se bem utilizadas, certamente terão esse papel.
   </p>
-</body>
+</div>
 </html>
