--- a/Informatica/033/senhas.html
+++ b/Informatica/033/senhas.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Senhas</h2>
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     A maioria dos serviços que utilizarmos na internet e até mesmo nosso computador e alguns aplicativos que utilizamos, necessitarão de uma senha. A importância desta senha varia de acordo com a quantidade e a sensibilidade dos dados que ela protege. Algumas senhas serão utilizadas para acessar um aplicativo que utilizamos para tarefas simples, já outras serão utilizadas para acessar uma rede social na qual depositamos toda a nossa vida, ou para acessar a página de um serviço no qual cadastramos nossos documentos pessoais mais importantes. É preciso ter isso em mente para saber a importância que nossas senhas terão.
@@ -80,4 +75,4 @@
 	<p class="notas">
     Caso prefira não salvar suas senhas num serviço on-line, acesse JorgeOliveiraSantos.github.io, e na sessão de downloads, baixe o Gerenciador de Senhas.
   </p>
-</body>
+</div>
