--- a/Informatica/034/nuvem.html
+++ b/Informatica/034/nuvem.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Serviços de Nuvem</h2>
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Como já dito no início desta apostila, o Google fornece uma maneira prática de salvar os contatos na conta Gmail ao invés de salvar no celular, de forma que possamos acessá-los e editá-los pelo computador e mesmo que perdendo o celular podemos recuperá-los. Esses contatos são salvos num serviço de nuvem.
@@ -25,4 +20,4 @@
   <a class="js-button" href="https://www.dropbox.com" target="_blank">DropBox</a>
   <a class="js-button" href="https://www.microsoft.com/onedrive" target="_blank">Microsoft One Drive</a>
 
-</body>
+</div>
