--- a/Informatica/035/instalacao.html
+++ b/Informatica/035/instalacao.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Instalação e Desinstalação de Aplicativos</h2>
 
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -75,4 +70,4 @@
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <b>Ativar ou desativar recursos do Windows</b>: Esta opção permite ao usuário instalar e desinstalar alguns recursos como versões legadas do Internet Explorer e do Edge, do Windows Media Player, e diversos outros recursos. É aconselhável que ao desativar algum recurso da lista pesquise bem sobre ele para não desinstalar algo fundamental para o funcionamento do computador ou para o que você precisa. 
   </p>
-</body>
+</div>
