--- a/Informatica/037/gerenciador.html
+++ b/Informatica/037/gerenciador.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Gerenciador de Tarefas</h2>
   
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -66,4 +61,4 @@
   <h3></h3>
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   </p>
-</body>
+</div>
