--- a/Informatica/039/limpeza.html
+++ b/Informatica/039/limpeza.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
 <html>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8" />
-</head>
-
-<body class="js-post">
+<div class="js-post">
   <h2>Limpeza de Disco</h2>
 
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -22,4 +16,5 @@
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Este menu Ferramentas Administrativas contém vários recursos essenciais para gerenciar o computador.
   </p>
-</body>
+</div>
+</html>
