--- a/Informatica/040/verificacao.html
+++ b/Informatica/040/verificacao.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Verificação de Disco</h2>
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     A verificação de disco procura por setores defeituosos no disco e caso esteja configurado tenta corrigi-los, caso os setores corrompidos possam ser corrigidos, caso não possam, o verificador marca-os para que não sejam mais utilizados. No Windows temos duas formas de verificar o disco, pelo Explorador de Arquivos:
@@ -42,4 +37,4 @@
 	<p class="notas">
     O CheckDisk deve ser feito quando você perceber um funcionamento anormal do computador, ou depois de um desligamento inesperado.
   </p>
-</body>
+</div>
