--- a/Informatica/042/modo.html
+++ b/Informatica/042/modo.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Modo de Segurança</h2>
   
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -36,4 +31,4 @@
 	<p class="notas">
     Quando não precisar mais, lembre-se de abrir o msconfig novamente e configurá-lo para inicialização normal, caso contrário seu computador só iniciará os serviços básicos e alguns programas poderão não funcionar corretamente.
   </p>
-</body>
+</div>
