--- a/Informatica/043/restauracao.html
+++ b/Informatica/043/restauracao.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Restauração, Backup e Formatação</h2>
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Em muitos casos apenas uma reinstalação completa do Windows pode solucionar um problema, por isso é essencial o usuário conhecer o processo de backup, formatação e instalação do sistema operacional.
@@ -164,4 +159,4 @@
   <p class="notas">
     Se o motivo da formatação for a remoção de um vírus que estava causando a anormalidade no computador, o ideal é não manter nada. Assim que a formatação for feita, se for copiar arquivos de um backup, uma verificação com o antivírus deve ser feita neles.
   </p>
-</body>
+</div>
