--- a/Informatica/044/raiz.html
+++ b/Informatica/044/raiz.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>A Pasta Raiz</h2>
   
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -37,4 +32,4 @@
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Cada perfil da pasta usuário possui uma pasta específica onde ficam armazenadas as pastas Documentos, Imagens, Músicas, Vídeos, Downloads, entre outras. Quando utilizamos o Explorador de Arquivos, na barra da lateral esquerda, o que temos são atalhos para essas pastas. Pela pasta Usuários, é possível acessar as pastas de outros usuários que utilizam o computador, no entanto, caso a conta a qual o perfil pertence possua uma senha, ela será solicitada. O mesmo acontece ao acessarmos uma pasta de um usuário em outro computador da rede cuja conta possua uma senha.
   </p>
-</body>
+</div>
