--- a/Informatica/046/servicos.html
+++ b/Informatica/046/servicos.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Serviços</h2>
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Cada programa rodando em nosso computador pertence a um serviço, lembrando que nem todos os programas que rodam num computador precisam ter uma interface gráfica (janela, caixa de mensagem etc.) visível. Os programas que não estão visualmente ativos, pertencem a processos que rodam em “segundo plano”.
@@ -28,4 +23,4 @@
     Tome cuidado para não desativar serviços essenciais para o funcionamento do computador, alguns controlam conexão de rede, execução de áudio e vídeo entre outras tarefas importantes.
   </p>
 
-</body>
+</div>
