--- a/Informatica/048/agendador.html
+++ b/Informatica/048/agendador.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Agendador de Tarefas</h2>
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     O aplicativo Agendador de Tarefas é uma ferramenta muito útil quando precisamos programar o computador para executar certas ações sozinho. Por exemplo, podemos programar um aplicativo para ser aberto sempre que o computador ligar, ou programar o computador para desligar ou reiniciar sempre num horário determinado. Podemos até mesmo incluir argumentos ao abrir aplicações, por exemplo, você precisa acessar um site todo dia às cinco da tarde? Programe uma tarefa para abrir o navegador todo dias às cinco da tarde e passe como argumento o site!
@@ -39,4 +34,4 @@
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Você pode ainda abrir o aplicativo Agendador de Tarefas pressionando ⊞+R e digitando: <b> taskschd.msc</b>
   </p>
-</body>
+</div>
