--- a/Informatica/049/gerenciamento.html
+++ b/Informatica/049/gerenciamento.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Gerenciamento de Disco</h2>
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     O aplicativo Gerenciamento de Disco é um software utilizado para gerenciar partições de disco no Windows, um mesmo disco, que pode ser um HD ou pendrive, pode conter em si mesmo várias partições com nomes e tamanhos diferentes e que serão exibidas no Explorador de Arquivos como discos diferentes.
@@ -27,4 +22,4 @@
   <p class="notas">
     ATENÇÃO!!! É necessário muito cuidado ao lidar com partições de disco, para não excluir um volume que contenha seus arquivos pessoais. É aconselhável que só efetue esse processo após mover todos os arquivos para uma unidade externa de backup.
   </p>
-</body>
+</div>
