--- a/Informatica/050/powershell.html
+++ b/Informatica/050/powershell.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Windows PowerShell</h2>
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     As primeiras versões do Windows já contavam com o Prompt de Comandos, pelo qual, utilizando comandos Bash podemos executar uma infinidade de tarefas, como gerenciar arquivos e pastas, obter informações, gerenciar o computador, configurar a rede, entre muitos outros recursos. A partir do Windows 7 estreou o Windows PowerShell, uma ferramenta ainda mais poderosa que roda no .NET Framework e que utiliza uma linguagem de script que aceita objetos baseada em C#, com influência de várias outras linguagens de programação.
@@ -171,4 +166,4 @@
   <p class="codigo">
     Start-Process Mspaint
   </p>
-</body>
+</div>
