--- a/Informatica/052/proximo.html
+++ b/Informatica/052/proximo.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Próximos passos depois da Informática Básica</h2>
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Quem já domina a informática básica costuma estagnar por não saber quais os próximos passos a dar e em que se aprofundar. 
@@ -52,4 +47,4 @@
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Nos próximos dois capítulos abordarei os dois setores que conheço a fundo e que considero boas alternativas. O Desenvolvimento de Softwares e o Design Gráfico.
   </p>
-</body>
+</div>
