--- a/Informatica/053/programacao.html
+++ b/Informatica/053/programacao.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Desenvolvimento de Software</h2>
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     O setor de desenvolvimento de software é um setor promissor para quem deseja entrar no mercado de trabalho. Há muito que eu poderia falar aqui, mas vou passar apenas o básico para quem se interessar em tornar-se um programador de aplicativos:
@@ -92,4 +87,4 @@
     Pronto! Você já tem um programa que faz a exclusão de arquivos temporários que se acumulam com o tempo deixando o computador lento, e o melhor de tudo, foi você mesmo o programou!
   </p>
 
-</body>
+</div>
