--- a/Informatica/054/design.html
+++ b/Informatica/054/design.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Design Gráfico</h2>
   
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -167,4 +162,4 @@
   <p class="notas">
     Caso prefira se aprofundar de maneira profissional no ramo do design gráfico sugiro fazer o Curso Completo de Design Gráfico em JorgeOliveiraSantos.github.io, onde você aprenderá a trabalhar com softwares como Inkscape, Krita, CorelDraw, Illustrator, Photoshop, Publisher, Powerpoint. E aprenderá conceitos de design para desenho artístico profissional, diagramação e artes visuais para publicidade.
   </p>
-</body>
+</div>
