--- a/Sobre/sobre.html
+++ b/Sobre/sobre.html
@@ -2,69 +2,40 @@
 <html>
 <head>
   <title>Sobre</title>
-  <link rel="stylesheet" href="css/site.css">
+  <link rel="stylesheet" href="../css/index.css">
+  <link rel="icon" type="image/x-icon" href="../logo.svg">
+  <script src="../javascript/index.js"></script>
   <meta charset="UTF-8"/>
+  <!--SEO-->
+  <meta name="author" content="Jorge Souza Oliveira dos Santos"/>
+  <meta name="description" content="Desenvolvimento Web - Curso Completo">
+  <meta name="keywords" content="web design, curso, html, css, javascript, computacao, informatica">
 </head>
 
-<body class="js-page">
-  <main>
-    <h1>Sobre</h1>
-    <table style="width: 100%; margin: auto; background-color: #0005; padding: 20px; text-align: center;">
-      <tr>
-        <td>
-          <a href="https://www.facebook.com/artesgraficaseprojetos" target="_blank">
-          <img src="files/facebook.png" width="80px" title="Facebook"></a>
-        </td>
-        <td>
-          <a href="mailto:jorge.sos777@gmail.com?Subject=Contato" target="_blank">
-          <img src="files/gmail.png" width="80px" title="Gmail"></a>
-        </td>
-        <td>
-          <a href="https://www.workana.com/freelancer/175498bc00eeda4731ad4044f609f5a5" target="_blank">
-          <img src="files/Workana.png" width="80px" title="Workana"></a>
-        </td>
-        <td>
-          <a href="https://join.skype.com/invite/uMbQf0utKfUz" target="_blank">
-          <img src="files/skype.png" width="80px" title="Skype"></a>
-        </td>
-        <td>
-          <a href="https://wa.me/5577991161892" target="_blank">
-          <img src="files/whatsapp.png" width="80px" title="Whatsapp"></a>
-        </td>
-        <td>
-          <a href="https://www.youtube.com/channel/UC9XLPhnWcJqaT5bmlb2KezA" target="_blank">
-          <img src="files/Youtube.png" width="80px" title="Youtube"></a>
-        </td>
-      </tr>
-      <tr>
-        <td>facebook</td>
-        <td>gmail</td>
-        <td>workana</td>
-        <td>skype</td>
-        <td>whatsapp</td>
-        <td>youtube</td>
-      </tr>
-    </table>
+<menu-bar></menu-bar>
 
+<div class="js-page">
+  <div class="js-post">
+    <h1>Sobre</h1>
     <h3>Formação</h3>
     <ul>
-      <li style='list-style: "\261B";'>Ensino Médio Completo</li>
-      <li style='list-style: "\261B";'>Inglês Básico</li>
-      <li style='list-style: "\261B";'>Espanhol Básico</li>
+      <li>Ensino Médio Completo</li>
+      <li>Inglês Básico</li>
+      <li>Espanhol Básico</li>
     </ul>
-
+    
     <h3>Habilidades</h3>
     <ul>
-      <li style='list-style: "\261B";'>Design Gráfico em Comunicação Visual</li>
-      <li style='list-style: "\261B";'>Instrutor de Cursos Técnicos</li>
-      <li style='list-style: "\261B";'>Modelagem 3D</li>
-      <li style='list-style: "\261B";'>Desenvolvimento Desktop em .NET Core</li>
-      <li style='list-style: "\261B";'>Desenvolvimento Web em ASP .NET Core</li>
-      <li style='list-style: "\261B";'>Desenvolvimento em C++</li>
+      <li>Design Gráfico em Comunicação Visual</li>
+      <li>Instrutor de Cursos Técnicos</li>
+      <li>Modelagem 3D</li>
+      <li>Desenvolvimento Desktop em .NET Core</li>
+      <li>Desenvolvimento Web em ASP .NET Core</li>
+      <li>Desenvolvimento em C++</li>
     </ul>
 
     <h3>Carreira</h3>
-    <p class="inicial">
+    <p>
       Em 2007, com 18 anos, enquanto cursava o terceiro ano do ensino médio, e após concluir um curso de Design Gráfico na NIT Cursos, ingressei, por indicação do professor do curso, numa vaga de Designer Gráfico estagiário na Dignart Publicidade Visual, onde permaneci até 2009, trabalhando também como adesivador e na plotagem de projetos de AutoCAD, enquanto fazia o curso de AutoCAD, também na NIT Cursos, para me aperfeiçoar no trabalho de plotagem.
     </p>
     <p>
@@ -73,8 +44,8 @@
     <p>
       A partir de 2018 comecei a trabalhar como freelancer e iniciei minha formação em Programação já acumulando atualmente sete certificados e alguns projetos concluídos com êxito. Atualmente me dedico exclusivamente ao desenvolvimento Web com a plataforma ASP .NET e desenvolvimento desktop com a plataforma .NET, ambas utilizando a linguagem C#, apesar de executar alguns projetos com C++.
     </p>
-    <p>
-    </p>
-  </main>
-</body>
+  </div>
+</div>
 </html>
+
+<footer-bar></footer-bar>
