--- a/Web Design/001/ohtml.html
+++ b/Web Design/001/ohtml.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8"/>
 </head>
 
-<body class="js-post">
+<div class="js-post">
   <h2>O HTML</h2>
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     HTML é a abreviação de HiperText Markup Language que significa Linguagem de Marcação de Hipertexto, e como o próprio nome diz é uma linguagem de marcação assim como XML, utilizada para descrever páginas da web a serem exibidas em navegadores, e atualmente também para descrever interfaces utilizadas em aplicações com runtimes que permitem execução da páginas web fora do navegador.
