--- a/Web Design/002/marcas.html
+++ b/Web Design/002/marcas.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8"/>
 </head>
 
-<body class="js-post">
+<div class="js-post">
   <h2>Marcas</h2>
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     O código HTML é definido com marcas, ou tags que possuem abertura e fechamento:
