--- a/Web Design/003/estrutura.html
+++ b/Web Design/003/estrutura.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8"/>
 </head>
 
-<body class="js-post">
+<div class="js-post">
   <h2>Estrutura de um documento HTML</h2>
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Todo documento HTML deve iniciar com uma tag &lt;!DOCTYPE html&gt; que define o tipo de documento a ser interpretado pelo navegador, em seguida abrimos o documento com uma tag &lt;html&gt;
