--- a/Informatica/003/gabinete.html
+++ b/Informatica/003/gabinete.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
-
-<body class="js-post">
+<div class="js-post">
 	<h2>Gabinete e Periféricos</h2>
 	<img src="gabinete.png">
 
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Apesar de tratarmos todo o conjunto de equipamentos que utilizamos num computador como se todos fossem o próprio computador, na verdade, os que podem ser desligados sem desligar o computador (teclado, mouse, monitor, impressora...) são os periféricos, e conectam-se ao gabinete, dentro do gabinete, vários aparelhos auxiliam o processador no trabalho, entre eles estão o disco onde armazenamos nossos dados e programas, a memória RAM onde os programas são executados, a placa de vídeo, de áudio, de usb, entre outros, mas quem computa os dados realmente é o processador, sem ele a mágica não seria possível.</p>
-</body>
+</div>
+<link rel="stylesheet" href="../../css/index.css">
