--- a/Informatica/008/historia.html
+++ b/Informatica/008/historia.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Um pouco de história</h2>
 
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -20,6 +15,6 @@
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Hoje o Windows é o sistema operacional para PCs mais utilizado no mundo, e no segmento de sistemas operacionais só perde para o sistema Android dos smartphones.
   </p>
-</body>
-
+</div>
+</html>
 
