--- a/Informatica/010/desktop.html
+++ b/Informatica/010/desktop.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Área de Trabalho</h2>
 	<img src="desktop.png">
 
@@ -41,4 +36,5 @@
 
 	<img src="cascata.png">
 
-</body>
+</div>
+</html>
