--- a/Informatica/011/mouse.html
+++ b/Informatica/011/mouse.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Mouse</h2>
   
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -57,4 +52,5 @@
     <b>Clique Duplo da Scroll</b>: Apesar de raro, em alguns editores a Scroll também possui função de clique duplo, que geralmente é usada para dar um zoom em todos os objetos presentes na tela.
   </p>
 
-</body>
+</div>
+</html>
