--- a/Informatica/014/explorer.html
+++ b/Informatica/014/explorer.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Explorador de Arquivos</h2>
 	<img src="explorer.png" style="width: 100%;">
 
@@ -286,4 +281,4 @@
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Feche a lixeira e todas as outras janelas que estão minimizadas na Barra de Tarefas.
   </p>
-</body>
+</div>
