--- a/Informatica/017/acessorios.html
+++ b/Informatica/017/acessorios.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Acessórios do Windows</h2>
 
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -63,4 +58,4 @@
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   </p>
 
-</body>
+</div>
