--- a/Informatica/018/textos.html
+++ b/Informatica/018/textos.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Textos</h2>
 
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -76,4 +71,4 @@
     No nosso poema a única coisa que alteraremos no parágrafo é o alinhamento, que colocaremos como centralizado.
   </p>
 
-</body>
+</div>
