--- a/Informatica/022/download2.html
+++ b/Informatica/022/download2.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Download de Aplicativos e Programas</h2>
 
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -29,4 +24,4 @@
     Pela Microsoft Store podemos instalar acessórios do Windows que estejam ausentes no computador como a Calculadora, o Calendário, o aplicativo Fotos, entre outros.
   </p>
 
-</body>
+</div>
