--- a/Informatica/023/google.html
+++ b/Informatica/023/google.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Google</h2>
 
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -34,4 +29,4 @@
     Pronto, você já tem um backup de sua agenda que pode resgatar sempre que precisar, sem se preocupar se perder o aparelho. Além de tudo pode organizar sua agenda diretamente do computador.
   </p>
 
-</body>
+</div>
