--- a/Informatica/025/microsoft.html
+++ b/Informatica/025/microsoft.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Conta Microsoft</h2>
 
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -28,4 +23,4 @@
     Outro serviço de e-mail que você pode utilizar é o Outlook, com o diferencial que você pode usar o aplicativo desktop para sincronizar seus e-mails em plano de fundo e ser alertado sempre que um novo e-mail for recebido.
   </p>
 
-</body>
+</div>
