--- a/Informatica/026/sites.html
+++ b/Informatica/026/sites.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Sites Úteis</h2>
 
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -43,4 +38,4 @@
     O Canva é um serviço de design gráfico gratuito onde você pode criar suas artes a partir de uma infinidade de templates prontos e diversas ferramentas.
   </p>
 
-</body>
+</div>
