--- a/Informatica/028/exercicio1.html
+++ b/Informatica/028/exercicio1.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
 <html>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8" />
-</head>
-
-<body class="js-post">
+<div class="js-post">
   <img src="exercicio.png" style="width: 100%;">
 
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -17,8 +11,7 @@
     preciso estar logado em sua conta Microsoft.
   </p>
 
-  <embed src="exercicio1.pdf#view=FitH&toolbar=0" type="application/pdf"
-    style="border: none; width: 100%; height: 4200px;"></embed>
+  <iframe src="https://drive.google.com/file/d/1fmz_1gfOZerSzw-YEUyDuV2Pwrl37NMD/preview" width="640" height="480" allow="autoplay"></iframe>
 
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Após terminar de digitar todo o texto inicie a formatação. Abaixo temos as duas barras de formatação, de caractere e
@@ -256,5 +249,5 @@
   <p style="margin-left: 60px;">&#x261B;
     Entre outros recursos.
   </p>
-
-</body>
+</div>
+</html>
