--- a/Informatica/028/word.html
+++ b/Informatica/028/word.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Microsoft Word</h2>
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Com alguns recursos a mais, o Word possui as mesmas características do Wordpad na hora de formatar caracteres e parágrafos. Neste módulo abordaremos apenas os conceitos básicos de formatação de texto para compreender os recursos fundamentais do Word. Para um entendimento mais a fundo de tipografia sugiro que faça o Curso Completo de Design Gráfico em:
@@ -23,7 +18,7 @@
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     O Windows vem com uma boa quantidade de famílias de fontes pré-instaladas. Uma família de fonte é um estilo de fonte como Arial que contém variações como itálico, negrito etc.
   </p>
-  <div style="margin-left: 60px; zoom: 150%;">
+  <div style="margin-left: 60px;">
     <p style="font-family: 'Arial';">
       Este texto está na fonte Arial
     </p>
@@ -45,13 +40,12 @@
   <p style="margin-left: 60px; font-size: 11pt;"> Este texto tem tamanho 11pt</p>
   <p style="margin-left: 60px; font-size: 16pt;"> Este texto tem tamanho 16pt</p>
   <p style="margin-left: 60px; font-size: 24pt;"> Este texto tem tamanho 24pt</p>
-  <p style="margin-left: 60px; font-size: 36pt;"> Este texto tem tamanho 36pt</p>
 
   <h3>Estilos de Caractere</h3>
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Os estilos de caractere incluem negrito, itálico, sublinhado, tachado, subscrito e sobrescrito:
   </p>
-<div style="margin-left: 60px; zoom: 150%;">
+<div style="margin-left: 60px;">
   <p>Este é um texto normal</p>
   <p><b>Este texto está em negrito</b></p>
   <p><i>Este texto está em itálico</i></p>
@@ -66,32 +60,32 @@
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Os estilos de parágrafo incluem listas ordenadas e não ordenadas, espaçamentos e tabulações, alinhamento, bordas etc.:
   </p>
-  <div style="display: inline-block; padding: 25px; margin: 25px; width: 200px; vertical-align: top; background-color: #ddd;"><p style="text-align: left; font-size: 30pt; color: #111;">
+  <div style="display: inline-block; padding: 15px; margin: 15px; width: 200px; vertical-align: top; background-color: #ddd;"><p style="text-align: left; font-size: 20pt; color: #111;">
     Este é um pequeno exemplo de como formatar um parágrafo alinhado à esquerda
   </p></div>
-  <div style="display: inline-block; padding: 25px; margin: 25px; width: 200px; vertical-align: top; background-color: #ddd;"><p style="text-align: center; font-size: 30pt; color: #111;">
+  <div style="display: inline-block; padding: 15px; margin: 15px; width: 200px; vertical-align: top; background-color: #ddd;"><p style="text-align: center; font-size: 20pt; color: #111;">
     Este é um pequeno exemplo de como formatar um parágrafo centralizado à página
   </p></div>
-  <div style="display: inline-block; padding: 25px; margin: 25px; width: 200px; vertical-align: top; background-color: #ddd;"><p style="text-align: right; font-size: 30pt; color: #111;">
+  <div style="display: inline-block; padding: 15px; margin: 15px; width: 200px; vertical-align: top; background-color: #ddd;"><p style="text-align: right; font-size: 20pt; color: #111;">
     Este é um pequeno exemplo de como formatar um parágrafo alinhado à direita
   </p></div>
-  
-  <div style="display: inline-block; padding: 25px; margin: 25px; width: 250px; vertical-align: top; background-color: #ddd;">
-    <p style="font-size: 30pt; color: #111;">Exemplo de lista com marcadores:</p>
+  <br>
+  <div style="display: inline-block; padding: 15px; margin: 15px; width: 200px; vertical-align: top; background-color: #ddd;">
+    <p style="font-size: 20pt; color: #111;">Exemplo de lista com marcadores:</p>
     <ul>
-      <li style="font-size: 25pt; color: #111;">Opção 01</li>
-      <li style="font-size: 25pt; color: #111;">Opção 02</li>
-      <li style="font-size: 25pt; color: #111;">Opção 03</li>
-      <li style="font-size: 25pt; color: #111;">Opção 04</li>
+      <li style="font-size: 20pt; color: #111;">Opção 01</li>
+      <li style="font-size: 20pt; color: #111;">Opção 02</li>
+      <li style="font-size: 20pt; color: #111;">Opção 03</li>
+      <li style="font-size: 20pt; color: #111;">Opção 04</li>
     </ul>
   </div>
-  <div style="display: inline-block; padding: 25px; margin: 25px; width: 250px; vertical-align: top; background-color: #ddd;">
-    <p style="font-size: 30pt; color: #111;">Exemplo de lista ordenada:</p>
+  <div style="display: inline-block; padding: 15px; margin: 15px; width: 200px; vertical-align: top; background-color: #ddd;">
+    <p style="font-size: 20pt; color: #111;">Exemplo de lista ordenada:</p>
     <ol>
-      <li style="font-size: 25pt; color: #111;">Opção 01</li>
-      <li style="font-size: 25pt; color: #111;">Opção 02</li>
-      <li style="font-size: 25pt; color: #111;">Opção 03</li>
-      <li style="font-size: 25pt; color: #111;">Opção 04</li>
+      <li style="font-size: 20pt; color: #111;">Opção 01</li>
+      <li style="font-size: 20pt; color: #111;">Opção 02</li>
+      <li style="font-size: 20pt; color: #111;">Opção 03</li>
+      <li style="font-size: 20pt; color: #111;">Opção 04</li>
     </ol>
   </div>
 
@@ -99,4 +93,4 @@
     O ícone de pincel na barra da área de transferência (Pincel de Formatação) serve para copiar o estilo de formatação de um texto para outro. Está presente em praticamente todos os aplicativos do Office. É possível também copiar o estilo de formatação com o atalho Ctrl+Shift+C e colar em outro texto com o atalho Ctrl+Shift+V.
   </p>
     
-</body>
+</div>
