--- a/Informatica/030/excel2.html
+++ b/Informatica/030/excel2.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
   <h2>Excel</h2>
   <h3>Aritmética Básica</h3>
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -372,4 +367,4 @@
     Podemos ainda testar o conteúdo existente numa célula, por exemplo: SE(A1=“sim”;1;2). Se o valor em A1 for “sim”, retorna 1, senão, retorna 2.
   </p>
 
-</body>
+</div>
