--- a/Informatica/031/publisher.html
+++ b/Informatica/031/publisher.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Microsoft Publisher</h2>
   <img src="publisher.png">
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -83,7 +78,7 @@
     3. Crie uma gradação que comece no branco, passe pelo verde claro e termine no azul claro. Assim:
   </p>
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="50" viewBox="0 0 100% 50" fill="cyan" style="border: #FA0 1px solid;">
+    <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="50" viewBox="0 0 100 50" fill="cyan" style="border: #FA0 1px solid;">
       <!-- Gradientes: -->
       <linearGradient id="meuGradiente1"
         x1="0%" y1="0%" x2="100%" y2="0%" gradientUnits="objectBoundingBox">
@@ -407,7 +402,7 @@
     6. Está finalizado nosso exercício! Verifique a seguir o resultado e compare com o que você criou.
   </p>
 
-  <embed src="Exercício Publisher.pdf#toolbar=0&view=FitH" type="application/pdf" style="display: block; border: none; width: 80%; height: 3350px; margin: auto;"></embed>
+  <iframe src="https://drive.google.com/file/d/1xNoWpg2ybklhiACWe-WUz7dvfuiv9z9k/preview" width="640" height="480" allow="autoplay"></iframe>
 
 	<p class="notas">
     Ficou parecido? Se tiver dificuldades com este exercício peça o auxílio de seu instrutor. Você pode baixar o arquivo finalizado no link abaixo para verificar como foi feito:
@@ -422,7 +417,4 @@
     Caso queira se aprofundar e conhecer um pouco mais sobre as ferramentas de criação destes aplicativos sugiro que faça o Curso Completo de Design Gráfico em:
   </p>
   <a class="js-button" href="../../design.html" target="_blank">Curso Completo de Design Gráfico</a>
-</body>
-
-
-</svg>
+</div>
