--- a/Informatica/036/msdefender.html
+++ b/Informatica/036/msdefender.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Microsoft Defender</h2>
 
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -68,4 +63,4 @@
 <p class="notas">
   É preciso tomar cuidado ao incluir um arquivo na lista de exclusões. Antes de fazer isso sugiro que pesquise bem sobre o arquivo para saber que riscos ele pode oferecer.
 </p>
-</body>
+</div>
