--- a/Informatica/038/saude.html
+++ b/Informatica/038/saude.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Saúde do Computador</h2>
   
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -33,4 +28,4 @@
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Limpar essas pastas de vez em quando melhorará consideravelmente o desempenho do computador. Mais à frente veremos como criar um programinha para fazer este serviço.
   </p>
-</body>
+</div>
