--- a/Informatica/041/arquivos.html
+++ b/Informatica/041/arquivos.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Verificação de Arquivos</h2>
   
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -31,4 +26,4 @@
   <p class="notas">
     A verificação de arquivos e restauração da imagem do Windows deve ser feita quando o computador apresentar comportamento anormal como problemas para abrir programas e erros de DLL e de arquivos do sistema faltantes.
   </p>
-</body>
+</div>
