--- a/Informatica/045/log.html
+++ b/Informatica/045/log.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Log de Eventos</h2>
   
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -19,4 +14,4 @@
     Para acessar o Log de Eventos do Windows, clique em Iniciar → Ferramentas Adimistrativas → Visualizador de Eventos.
 	Você pode ainda abrir o Visualizador de Eventos pressionando ⊞+R e digitando: <b>eventvwr.msc</b>
   </p>
-</body>
+</div>
