--- a/Informatica/051/rede.html
+++ b/Informatica/051/rede.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
 	<h2>Rede e Compartilhamento</h2>
   
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -128,4 +123,4 @@
   <p class="notas">
     Obs.: A configuração feita acima não cria um servidor on-line, o que quer dizer que nenhum dos computadores, nem mesmo o servidor poderá ser acessado pela internet, somente pela rede interna (intranet), o processo para criar um servidor de internet, que receba solicitações pela web, é diferente e foge do escopo dessa apostila.
   </p>
-</body>
+</div>
