--- a/Informatica/055/open.html
+++ b/Informatica/055/open.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Informática</title>
-  <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
-</head>
+  <link rel="stylesheet" href="../../css/index.css">
 
-<body class="js-post">
+<div class="js-post">
   <h2>Software Livre</h2>
   
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
