--- a/Web Design/000/intro.html
+++ b/Web Design/000/intro.html
@@ -6,8 +6,47 @@
   <meta charset="UTF-8"/>
 </head>
 
-<body class="js-page">
-</body>
+<div class="js-page">
+  <div class="js-post">
+    <h2>Introdução</h2>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      Esta página é uma compilação de títulos retirados em ordem do primeiro módulo Curso Completo de Desenvolvimento Web. Este primeiro módulo cobre os principais conceitos de Web Design que são: HTML, CSS e Javascript básico e orientado ao DOM HTML.
+    </p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      O Web Design é o setor voltado para a criação de páginas Web Estáticas destinadas a exibir conteúdo, como sites, blogs entre outras, é um amplo setor e muito requisitado no mercado. No entanto em módulos avançados deste curso aprenderemos também o desenvolvimento de aplicações web que gerenciam lógica e bancos de dados e APIs da web capazes de receber solicitações do usuário.
+    </p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      Este material pode ser adquirido impresso na internet ou por meio de seu instrutor, também pode ser adquirido em formato digital (e-book). Este é o material oficial do Curso Completo de Desenvolvimento Web. A venda desta apostila por qualquer outro meio que não seja pelo site citado, por um instrutor autorizado ou diretamente pelo autor do curso, está desautorizada.
+    </p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      Todas as marcas citadas neste livro estão protegidas por seus próprios direitos autorais. A utilização das mesmas serve unicamente para fim didático. O Autor, não possui qualquer ligação com nenhuma marca citada e não promove o marketing das mesmas.
+    </p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      Desenvolver uma apostila não é uma tarefa fácil, requer bastante conhecimento sobre o assunto e algum tempo de prática. Com a experiência isso se torna mais fácil. Mas desenvolver uma metodologia de ensino é bem diferente, a gente só aprende isso com experiência em sala de aula. Isso você não encontra no Youtube. Esse é o diferencial dos cursos disponibilizados por mim, uma metodologia de ensino que mescla experiência de sala de aula, experiência em escrita de livros (pois o autor é também escritor), e experiência no cuidado com os alunos. Tudo para garantir que ao término do curso não tenha apenas ocorrido um processo mecânico, mas para que o aluno possa começar do zero e sair dominando o assunto para se inserir no mercado de trabalho.
+    </p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      Estou constantemente desenvolvendo novos materiais e novos cursos, além de atualizar os materiais já produzidos, para acompanhar as alterações constantes nos produtos digitais. Portanto sugiro que esteja sempre atento em meu site para verificar se há algo novo que você goste, saiba mais.
+    </p>
+  </div>
+  <div class="js-post">
+    <h2>O HTML</h2>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      HTML é a abreviação de HiperText Markup Language que significa Linguagem de Marcação de Hipertexto, e como o próprio nome diz é uma linguagem de marcação assim como XML, utilizada para descrever páginas da web a serem exibidas em navegadores, e atualmente também para descrever interfaces utilizadas em aplicações com runtimes que permitem execução da páginas web fora do navegador.
+    </p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Os arquivos HTML possuem a extensão .html e .htm e podem ser escitos em qualquer editor de textos que serão interpretados pelo navegador. É uma linguagem que suporta:
+    </p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Mídia: exibição de conteúdos de áudio, video, gráficos 2D e 3D.
+    </p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Eventos: ações do usuário como clique e movimentação do mouse.
+    </p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Scripts e Estilos: Pode receber código em CSS para definição de estilo e Javascript para manipular lógica.
+    </p>
+  </div>
+</div>
 
 
 
