--- a/Web Design/005/005.html
+++ b/Web Design/005/005.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8"/>
 </head>
 
-<body class="js-post">
+<div class="js-post">
   <h2>Introdução</h2>
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Lore ipsum
