--- a/index.html
+++ b/index.html
@@ -3,50 +3,93 @@
 <head>
   <title>Jorge Oliveira Santos</title>
   <link rel="stylesheet" href="css/index.css">
-  <link rel="icon" type="image/x-icon" href="logo.ico">
+  <link rel="icon" type="image/x-icon" href="logo.svg">
   <meta charset="UTF-8"/>
   <meta name="viewport"  content="width=device-width, initial-scale=1">
   <!--SEO-->
   <meta name="author" content="Jorge Souza Oliveira dos Santos"/>
   <meta name="description" content="Jorge Souza Oliveira dos Santos">
   <meta name="keywords" content="informatica, curso, computador, computacao, programação, desenvolvimento, web, design">
-
 </head>
+
 <nav class="js-nav">
   <ul>
-    <li class="active"><a href="index.html">Início</a></li>
+    <li><a href="index.html">Início</a></li>
     <li><a href="Informatica/informatica.html">Informática</a></li>
     <li class="js-drop-button">
-      <a>Programação ▼</a>
+      <a>Programação <i class="seta"></i></a>
       <div class="js-drop-content">
         <a href="Web Design/webdesign.html">Web Design</a>
+        <hr>
+        <a>em construção...</a>
       </div>
     </li>
-    <li class="right"><a href="sobre.html">Sobre</a></li>
+    <li class="right"><a href="Sobre/sobre.html">Sobre</a></li>
   </ul>
+  <style>
+    .seta {
+      border: solid #ddd;
+      border-width: 0 3px 3px 0;
+      display: inline-block;
+      padding: 2px;
+      transform: rotate(45deg);
+      -webkit-transform: rotate(45deg);
+      margin: auto 5px auto 5px;
+    }
+  </style>
 </nav>
 
-
 <div class="js-banner">
-  <a id="banner1" href="sobre.html">Sobre
-    <img style="width: 100%; height: auto; left: 0;" alt="Sobre" src="files/Jorge oliveira.webp"/>
-  </a>
-  <a id="banner2" href="programacao.html">Programação
-    <img style="width: 100%; height: auto; left: 0;" alt="Programação" src="files/banner2.webp"/>
-  </a>
-  <a id="banner3" href="cursos.html">Cursos
-    <img style="width: 100%; height: auto; left: 0;" alt="Cursos" src="files/banner3.webp"/>
-  </a>
-  <a id="banner4" href="sobre.html">Conhecimento on-line
-    <img style="width: 100%; height: auto; left: 0;" alt="Conhecimento on-line" src="files/banner4.webp"/>
-  </a>
+
 </div>
-
-
-<body>
-
-  <main class="js-page">
-  </main>
-</body>
 </html>
+
+<div class="js-footer">
+  <table>
+    <tr>
+      <td>
+        <tit>Manuais e Apostilas</tit>
+      </td>
+      <td>
+        <tit>Aprendizado On-Line</tit>
+      </td>
+      <td>
+        <tit>Contato</tit>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <par onclick="window.location.replace(`#`)">Informática Básica e Avançada</par>
+        <par onclick="window.location.replace(`#`)">Design Gráfico</par>
+        <par onclick="window.location.replace(`#`)">Web Design (HTML e CSS)</par>
+        <par onclick="window.location.replace(`#`)">Javascript (Front-End e Back-End)</par>
+        <par onclick="window.location.replace(`#`)">Programação de Gráficos e Multimídia</par>
+        <par onclick="window.location.replace(`#`)">Programação para PC Desktop</par>
+        <par onclick="window.location.replace(`#`)">Desenvolvimento de Apps Móveis</par>
+        <par onclick="window.location.replace(`#`)">Desenvolvimento de Jogos</par>
+      </td>
+      <td>
+        <par onclick="window.location.replace(`Informatica/informatica.html`)">Informática Básica e Avançada</par>
+        <par onclick="window.location.replace(`#`)">Design Gráfico</par>
+        <par onclick="window.location.replace(`Web Design/webdesign.html`)">Web Design (HTML e CSS)</par>
+        <par onclick="window.location.replace(`#`)">Javascript (Front-End e Back-End)</par>
+        <par onclick="window.location.replace(`#`)">Programação de Gráficos e Multimídia</par>
+        <par onclick="window.location.replace(`#`)">Programação para PC Desktop</par>
+        <par onclick="window.location.replace(`#`)">Desenvolvimento de Apps Móveis</par>
+        <par onclick="window.location.replace(`#`)">Desenvolvimento de Jogos</par>
+      </td>
+      <td>
+        <par onclick="window.open(`mailto:jorge.sos777@gmail.com`)">Gmail</par>
+        <par onclick="window.open(`https://wa.me/5577991161892`)">Whatsapp</par>
+        <par onclick="window.open(`https://join.skype.com/invite/uMbQf0utKfUz`)">Skype</par>
+        <par onclick="window.open(`https://www.facebook.com/artesgraficaseprojetos`)">Facebook</par>
+        <par onclick="window.open(`https://www.instagram.com/jorgeoliveiraonline/`)">Instagram</par>
+        <par onclick="window.open(`https://www.workana.com/freelancer/175498bc00eeda4731ad4044f609f5a5`)">Workana (Freelancer)</par>
+      </td>
+    </tr>
+  </table>
+  <hr>
+  <img src="files/logo_amarela.svg" style="pointer-events: none; vertical-align: middle; border: none; background-color: transparent; width: 40px; display: inline-block; margin: auto;"/>
+  <tit style="vertical-align: middle; text-align: center; padding: 20px; display: inline-block;">Copyright © 2022 - Jorge Souza Oliveira dos Santos</tit>
+</div>
 
